--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "redux-toolkit": "^1.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
