--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
     "redux-toolkit": "^1.1.2"
   },
   "devDependencies": {
